--- a/.github/workflows/BlogAction.yml
+++ b/.github/workflows/BlogAction.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   lintTest:
-    name: lint
+    name: Lint
     runs-on: ubuntu-latest
     steps:
       - name: Clone the repository
@@ -19,3 +19,23 @@ jobs:
         run: |
           echo "Running Lint..."
           npm run lint
+
+  securityCheck:
+    name: Security Check
+    runs-on: ubuntu-latest
+    steps:
+      - name: Run
+        run: |
+          echo "Running Security Check"
+          sleep 5s;
+          echo "Running Security Check"
+          sleep 5s;
+
+  deploy:
+    name: Deployment
+    runs-on: ubuntu-latest
+    needs: [lintTest, securityCheck]
+    steps:
+      - name: Check the security
+        run: |
+          echo "Running your deployment"
